// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Typography/Text Bold 1`] = `
.c0 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c0 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c0 a {
    font-size: 14px;
  }
}

<span
  className="c0"
>
  The quick brown fox jumped over the lazy dog
</span>
`;

exports[`Storyshots Typography/Text Default 1`] = `
.c0 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c0 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c0 a {
    font-size: 14px;
  }
}

<span
  className="c0"
>
  The quick brown fox jumped over the lazy dog
</span>
`;

exports[`Storyshots Typography/Text Italic 1`] = `
.c0 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-style: italic;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c0 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-style: italic;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c0 a {
    font-size: 14px;
  }
}

<span
  className="c0"
>
  The quick brown fox jumped over the lazy dog
</span>
`;
